--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,9 @@
-/* You can add global styles to this file, and also import other style files */
+@import '@angular/material/theming';
+@include mat-core();
+
+$custom-app-primary: #64B5F6;
+$custom-app-secundary: #673Ab7;
+$custom-app-warn: #D50000;
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
