--- a/src/app/courses/courses/courses.component.html
+++ b/src/app/courses/courses/courses.component.html
@@ -1,3 +1,9 @@
+<mat-card>
+
+  <mat-toolbar color="primary">
+    <span>Cursos disponíveis</span>
+  </mat-toolbar>
+
 <table mat-table [dataSource]="courses" class="mat-elevation-z8">
   <!--- Note that these columns can be defined in any order.
         The actual rendered columns are set as a property on the row definition" -->
@@ -17,3 +23,4 @@
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
   <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
 </table>
+</mat-card>
