--- a/src/app/shared/components/error-dialog/error-dialog.component.html
+++ b/src/app/shared/components/error-dialog/error-dialog.component.html
@@ -1,7 +1,7 @@
-<div class="error-message" align="center" >
+<div class="error-message">
   <h1 mat-dialog-title color="primary">Erro inesperado</h1>
   <div mat-dialog-content>{{ data }}</div>
-  <div mat-dialog-actions align="center">
+  <div mat-dialog-actions>
     <button mat-raised-button color="primary" mat-button mat-dialog-close>Close</button>
   </div>
 </div>
