--- a/src/app/shared/components/error-dialog/error-dialog.component.scss
+++ b/src/app/shared/components/error-dialog/error-dialog.component.scss
@@ -1,8 +1,7 @@
 .error-message {
+  display: flex;
+  flex-direction: column;
   align-items: center;
-  // justify-content: center;
-
-
   button {
     padding: 0 3em;
   }
