--- a/src/app/courses/courses/courses.component.html
+++ b/src/app/courses/courses/courses.component.html
@@ -9,17 +9,37 @@
         The actual rendered columns are set as a property on the row definition" -->
 
       <!-- Position Column -->
+      <!-- ID Column -->
+      
       <ng-container matColumnDef="name">
         <th mat-header-cell *matHeaderCellDef>Curso</th>
         <td mat-cell *matCellDef="let course">{{ course.name }}</td>
       </ng-container>
-
-      <!-- Name Column -->
+      
+      <!-- Category Column -->
       <ng-container matColumnDef="category">
         <th mat-header-cell *matHeaderCellDef>Categoria</th>
         <td mat-cell *matCellDef="let course">{{ course.category }}
           <mat-icon aria-hidden="false" aria-label="Categoria do curso">{{ course.category | category}}</mat-icon>
         </td>
+      </ng-container>
+
+      <!-- Action Column -->
+      <ng-container matColumnDef="actions">
+        <mat-header-cell *matHeaderCellDef>
+          <button mat-icon-button color="accent" aria-label="Example icon button with a menu icon">
+            <mat-icon (click)="onAdd()" aria-label="add button">add</mat-icon>
+          </button>
+        </mat-header-cell>
+        <!-- pra cara registro, eu vou fazer alguma coisa com esse registro, é o que significa o let course. -->
+        <mat-cell *matCellDef="let course">
+          <button mat-icon-button color="primary" aria-label="Example icon button with a menu icon">
+            <mat-icon aria-label="add button">edit</mat-icon> 
+          </button>
+          <button mat-icon-button color="warn" aria-label="Example icon button with a menu icon">
+            <mat-icon aria-label="add button">delete</mat-icon> 
+          </button>
+        </mat-cell>
       </ng-container>
 
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
