--- a/src/app/courses/course-form/course-form.component.html
+++ b/src/app/courses/course-form/course-form.component.html
@@ -1,1 +1,34 @@
-<p>course-form works!</p>
+<!-- <div class="form">
+    <h2 class="form--title">Registration Course</h2>
+    <form [formGroup]="form">
+        <div [formGroupName]="name">
+            <label for="courseName">Course Name</label>
+            <input type="text" id="courseName" 
+            placeholder="Insert the name of the course"
+            formControlName="courseName"
+            >
+
+        </div>
+    </form>
+</div> -->
+
+<mat-card>
+  <mat-card-content>
+    <mat-toolbar color="primary">Informações do Curso</mat-toolbar>
+    <form action="" [formGroup]="form">
+      <mat-form-field appearance="legacy" class="full-width">
+        <mat-label>Nome</mat-label>
+        <input matInput placeholder="Nome" />
+      </mat-form-field>
+
+      <mat-form-field appearance="legacy" class="full-width">
+        <mat-label>Categoria</mat-label>
+        <input matInput placeholder="Categoria" />
+      </mat-form-field>
+    </form>
+    <mat-card-actions>
+      <button mat-raised-button color="primary" (click)="onSubmit()">Salvar</button>
+      <button mat-raised-button (click)="onCancel()">Cancelar</button>
+    </mat-card-actions>
+  </mat-card-content>
+</mat-card>
