--- a/src/app/courses/course-form/course-form.component.html
+++ b/src/app/courses/course-form/course-form.component.html
@@ -12,8 +12,8 @@
         <mat-label>Categoria</mat-label>
         <mat-select matNativeControl required formControlName="category">
           <mat-option value="null"></mat-option>
-          <mat-option value="front-end">Front-End</mat-option>
-          <mat-option value="back-edn">Back-End</mat-option>
+          <mat-option value="Front-End">Front-End</mat-option>
+          <mat-option value="Back-End">Back-End</mat-option>
         </mat-select>
       </mat-form-field>
     </form>
