--- a/src/app/courses/courses/courses.component.scss
+++ b/src/app/courses/courses/courses.component.scss
@@ -1,11 +1,21 @@
-table {
-  width: 100%;
+mat-card {
+
+  max-width: 80%;
+  margin: 2em auto;
+  text-align: center;
+
+  .column-flex {
+    display: flex;
+    flex-direction: column;
+    min-width: 18.75em;
+  }
+
+  .loading-spinner {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: rgba(0, 0, 0, 0.15);
+    padding: 2em;
+  }
 }
 
-.loading-spinner {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background: rgba(0, 0, 0, 0.15);
-  padding: 2em;
-}
